<resources>
    <string name="app_name">Catan Stat Tracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="black">Black</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="turn">Turn: 0</string>
    <string name="currentRoll">Current Roll</string>
    <string name="save">Save</string>
    <string name="end_game">End Game</string>
    <string name="title_activity_final_stats">FinalStats</string>
    <string name="rolled">Rolled</string>
    <string name="count">Count</string>
    <string name="percent">Percent</string>
    <string name="barbarians">BARBARIANS!</string>
    <string name="undo">Undo</string>
    <string name="noTurns">No Previous Turns</string>
    <string name="pirateAttack">Pirates attack next black roll!</string>
    <string name="newGame">New Game</string>
    <string name="checkStats">Check Stats</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="savedGames">Saved Games</string>

</resources>
