<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/turn"
                android:id="@+id/turnText"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noTurns"
                android:id="@+id/lastTurnText"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pirateAttack"
                android:id="@+id/pirateAttackText"
                android:visibility="invisible"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:weightSum="3">

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:id="@+id/buttonTwo"
                android:layout_toStartOf="@+id/rollText"
                android:layout_toRightOf="@+id/turnText"
                android:textOff="@string/two"
                android:textOn="@string/two"
                android:onClick="onClick"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:id="@+id/buttonThree"
                android:layout_below="@+id/turnText"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:textOff="@string/three"
                android:textOn="@string/three"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:id="@+id/buttonFour"
                android:layout_above="@+id/buttonFive"
                android:layout_toRightOf="@+id/rollText"
                android:layout_toEndOf="@+id/rollText"
                android:onClick="onClick"
                android:textOff="@string/four"
                android:textOn="@string/four"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:id="@+id/buttonFive"
                android:layout_alignParentRight="true"
                android:onClick="onClick"
                android:textOff="@string/five"
                android:textOn="@string/five"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:id="@+id/buttonSix"
                android:layout_below="@+id/buttonFour"
                android:onClick="onClick"
                android:textOff="@string/six"
                android:textOn="@string/six"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:id="@+id/buttonSeven"
                android:layout_below="@+id/buttonFive"
                android:layout_alignParentRight="true"
                android:onClick="onClick"
                android:textOff="@string/seven"
                android:textOn="@string/seven"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:id="@+id/buttonEight"
                android:layout_below="@+id/buttonSix"
                android:onClick="onClick"
                android:textOff="@string/eight"
                android:textOn="@string/eight"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:id="@+id/buttonNine"
                android:layout_below="@+id/buttonSeven"
                android:layout_alignParentRight="true"
                android:onClick="onClick"
                android:textOff="@string/nine"
                android:textOn="@string/nine"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ten"
                android:id="@+id/buttonTen"
                android:onClick="onClick"
                android:textOff="@string/ten"
                android:textOn="@string/ten"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/eleven"
                android:id="@+id/buttonEleven"
                android:layout_below="@+id/buttonNine"
                android:layout_alignParentRight="true"
                android:onClick="onClick"
                android:textOff="@string/eleven"
                android:textOn="@string/eleven"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/twelve"
                android:id="@+id/buttonTwelve"
                android:layout_below="@+id/buttonTen"
                android:onClick="onClick"
                android:textOff="@string/twelve"
                android:textOn="@string/twelve"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/yellow"
                android:id="@+id/buttonYellow"
                android:layout_below="@+id/buttonBlack"
                android:layout_alignParentRight="true"
                android:textOn="@string/yellow"
                android:textOff="@string/yellow"
                android:onClick="onClick"
                android:textSize="12sp"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3">

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:id="@+id/buttonGreen"
                android:textOff="@string/green"
                android:textOn="@string/green"
                android:onClick="onClick"
                android:textSize="12sp"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/black"
                android:id="@+id/buttonBlack"
                android:textOff="@string/black"
                android:textOn="@string/black"
                android:onClick="onClick"
                android:textSize="12sp"
                android:layout_weight="1" />

            <ToggleButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:id="@+id/buttonBlue"
                android:textOff="@string/blue"
                android:textOn="@string/blue"
                android:onClick="onClick"
                android:textSize="12sp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentRoll"
                android:id="@+id/rollText"
                android:textSize="18sp"
                android:visibility="invisible"
                android:layout_weight="2" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/saveButton"
                android:visibility="invisible"
                android:nestedScrollingEnabled="false"
                android:onClick="onSave"
                android:layout_weight="1"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:weightSum="3" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/end_game"
                android:id="@+id/endButton"
                android:textOff="@string/blue"
                android:textOn="@string/blue"
                android:onClick="onEnd"
                android:textSize="12sp"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/undo"
                android:id="@+id/undoButton"
                android:textOff="@string/green"
                android:textOn="@string/green"
                android:onClick="onClickUndo"
                android:textSize="12sp"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/checkStats"
                android:id="@+id/checkStatButton"
                android:textOff="@string/black"
                android:textOn="@string/black"
                android:onClick="onCheck"
                android:textSize="12sp"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
